--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Welccme !</h1>
     <p>Je suis un développeur backend</p>
+    <p>Je suis en tran d'apprendre Angular</p>
 </body>
 </html>
