--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Welccme !</h1>
     <p>Je suis un développeur backend</p>
-    <p>Je suis en tran d'apprendre Angular</p>
+    <p>Je suis en train d'apprendre Angular</p>
+    <p>Je suis en train d'apprendre C# et .NET</p>
 </body>
 </html>
